# bevy_text_animation

./: Cargo.toml  README.md
examples/: simple.rs  simple_text_ui.rs
src/: lib.rs
